--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -10,8 +10,9 @@ html
       = current_user.email
       = link_to 'Sign Out', session_path, method: :delete, remote: true
     .manage
-      =' link_to 'Products', admin_products_path
-      =' link_to 'Categories', admin_categories_path
+      => link_to 'Products', admin_products_path
+      => link_to 'Categories', admin_categories_path
+      => link_to 'Orders', admin_orders_path
 
     = render 'shared/flashes'
     .container
