--- a/app/views/admin/orders/index.html.slim
+++ b/app/views/admin/orders/index.html.slim
@@ -5,6 +5,8 @@ table.table
       th Status
       th Created
       th Total
-      th Action
+      th Email
+      th Phone
+      th Address
   tbody
     = render orders
