--- a/app/views/admin/orders/_order.html.slim
+++ b/app/views/admin/orders/_order.html.slim
@@ -1,5 +1,7 @@
 tr.order
-  td= link_to 'Status', admin_order_path(order.id)
+  td= 'Status'
+  td= link_to order.created_at.to_time, admin_order_path(order.id)
   td= number_to_currency(order.total)
-  td= order.created_at
-  td= link_to "Done", admin_order_path(order.id), method: :update, remote: true, data: { confirm: 'Are you sure?' }
+  td= order.email
+  td= order.phone
+  td= order.address
