--- a/app/views/admin/orders/_form.html.slim
+++ b/app/views/admin/orders/_form.html.slim
@@ -1,5 +1,7 @@
 = simple_form_for [:admin, order], remote: true do |f|
-  = f.input :email
-  = f.input :phone
+  = f.input :email, disabled: true
+  = f.input :phone, disabled: true
   = f.input :address
+  = f.input :status, collection: ['new', 'done', 'in process'],
+            prompt: 'Select status', selected: order.status
   = f.button :button, "Update", class: 'btn-primary'
