--- a/app/views/admin/orders/_order.html.slim
+++ b/app/views/admin/orders/_order.html.slim
@@ -1,5 +1,5 @@
-tr.order
-  td= 'Status'
+tr.order class='#{order.status}'
+  td= order.status.capitalize
   td= link_to order.created_at.to_time, admin_order_path(order.id)
   td= number_to_currency(order.total)
   td= order.email
