--- a/app/views/order_mailer/new_order.html.slim
+++ b/app/views/order_mailer/new_order.html.slim
@@ -1,4 +1,3 @@
 h3 New order available in geekhub depot!
 
-/* FIXME cange root_path to: admin_order_path(:id)*/
-= link_to "New order", root_url
+= link_to "New order", admin_order_url(@id)
